--- a/app/views/mobile_apps/_form.html.erb
+++ b/app/views/mobile_apps/_form.html.erb
@@ -13,22 +13,22 @@
 
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name , class: "form-control"%>
   </div>
 
   <div class="field">
     <%= form.label :description %>
-    <%= form.text_area :description %>
+    <%= form.text_area :description, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= form.label :image_url %>
-    <%= form.text_field :image_url %>
+    <%= form.text_field :image_url, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= form.label :store_link %>
-    <%= form.text_field :store_link %>
+    <%= form.text_field :store_link, class: "form-control" %>
   </div>
 
   <div class="actions">
