--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
 	  <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 	    <h1 class="display-4">I make apps.</h1>
-	    <p class="lead">I make mobile games and web applications.  However, sometimes I enjoy making art in Blender.</p>
+	    <p class="lead">I make mobile games and web applications.  However, sometimes I enjoy making art in Blender.  Click the Hire Me button in the top right corner and send me an email if you would like to hire me.</p>
 	  </div>
 	  
 	  </div>
