--- a/app/views/web_apps/index.html.erb
+++ b/app/views/web_apps/index.html.erb
@@ -2,23 +2,25 @@
 
 <h1>Web Apps</h1>
 
-<table>
+<table class="table table-bordered">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th>Link</th>
-      <th colspan="3"></th>
+		<th scope="col">#</th>
+      <th scope="col">Name</th>
+      <th scope="col">Description</th>
+      <th scope="col">Image url</th>
+      <th scope="col">Link</th>
+      <th  scope="col" colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @web_apps.each do |web_app| %>
       <tr>
+		  <th scope="row"><%= web_app.id %></th>
         <td><%= web_app.name %></td>
         <td><%= web_app.description %></td>
-        <td><%= web_app.image_url %></td>
+        <td><img src="<%= web_app.image_url%>" class="img-fluid" alt="<%= web_app.name %>"/></td>
         <td><%= web_app.link %></td>
         <td><%= link_to 'Show', web_app %></td>
         <td><%= link_to 'Edit', edit_web_app_path(web_app) %></td>
