--- a/app/views/welcome/_navbar.html.erb
+++ b/app/views/welcome/_navbar.html.erb
@@ -10,7 +10,7 @@
 	  <%= link_to "Web Apps", web_apps_path, class: "p-2 text-dark"%>
 	  <%= link_to "Blender Art", blender_arts_path, class: "p-2 text-dark"%> -->
   </nav>
-  <a href="mailto:johngoff18@gmail.com" class="btn btn-outline-primary float-right">Hire Me</a>
+  <a href="mailto:johngoff18@gmail.com" class="btn btn-outline-primary float-right">Contact Me</a>
   <div class="clearfix"></div>
 </div>  
 </div>
